--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PlasmaOS</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     </head>
     <body>
         <h1>Hello</h1>
-        <p>Hello</p>
+        <p style="font-family: Ubuntu;">Hello</p>
     </body>
 </html>
