--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     </head>
     <body>
-        <h1>Hello</h1>
+        <h1 style="font-family: Ubuntu; font-size: larger;">P L A S M A</h1>
         <p style="font-family: Ubuntu;">Hello</p>
     </body>
 </html>
