--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <style>.divscroll{width: 5; height: 10; overflow-x: scroll;}</style>
         <h1 style="font-family: Ubuntu; font-size: 128; color: white;">P L A S M A</h1>
-        <p style="font: size 30px;"><em>Minimal and collaborative kernel</em></p>
-        <p style="font-family: Ubuntu; font-size: medium;">Developed by: P L A S M A</p>
-        <a href="https://discord.gg/92RFjFyFHH">Join our community</a>
+        <p style="font-size: 30pt; color: white;"><em>Minimal and collaborative kernel</em></p>
+        <p style="font-family: Ubuntu; font-size: medium; color: white;">Developed by: P L A S M A</p>
+        <a href="https://discord.gg/92RFjFyFHH" style="color: white;">Join our community</a>
     </body>
 </html>
