--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 style="font-family: Ubuntu; font-size: 128; color: white;">P L A S M A - O S</h1>
         <p style="font-size: 30pt; color: white;"><em>Minimal and collaborative kernel</em></p>
         <p style="font-family: Ubuntu; font-size: medium; color: white;">Developed by: P L A S M A Company</p>
-        <a href="https://discord.gg/92RFjFyFHH" style="color: white;">Join our community</a>
+        <a href="https://discord.gg/92RFjFyFHH" style="color: white; font-family: Ubuntu;">Join our community</a>
         <a href="https://github.com/gabmeow/Plasma-OS/tree/main/DEMO-VERSION" style="color: white; font-family: Ubuntu;">Download the system</a>
         <a href="https://github.com/gabmeow/Plasma-OS/blob/main/README.md" style="color: white; font-family: Ubuntu;">System info</a>
         <a href="https://github.com/gabmeow/Plasma-OS/blob/main/LICENSE" style="color: white; font-family: Ubuntu;">LICENSE</a>
