--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
         <h1 style="font-family: Ubuntu; font-size: 128; color: white;">P L A S M A - O S</h1>
         <p style="font-size: 30pt; color: white;"><em>Minimal and collaborative kernel</em></p>
         <p style="font-family: Ubuntu; font-size: 30pt; color:white">DEMO OUT NOW!</p>
-        <li>
-            <h2 class="title">
-                <a href="https://github.com/gabmeow/Plasma-OS/issues" style="color: white; font-family: Ubuntu;" class="project-title">Issues</a>
-            </h2>
-            <p class="summary">Live issues of PlasmaOS</p>
-            <a class="card-icon" href="https://github.com/gabmeow/Plasma-OS">
-                <img src="images/github.png" title="GitHub page"> </a>
-        </li>
+        <section id="system">
+            <ol class="offerings">
+                <li>
+                    <h2 class="title">
+                        <a href="https://github.com/gabmeow/Plasma-OS/issues" style="color: white; font-family: Ubuntu;" class="project-title">Issues</a>
+                    </h2>
+                    <p class="summary">Live issues of PlasmaOS</p>
+                    <a class="card-icon" href="https://github.com/gabmeow/Plasma-OS">
+                        <img src="images/github.png" title="GitHub page"> </a>
+                </li>
+            </ol>
+        </section>
         <p style="font-family: Ubuntu; font-size: medium; color: white;">Developed by: P L A S M A Company</p>
         <a href="https://discord.gg/92RFjFyFHH" style="color: white; font-family: Ubuntu;">Join our community</a>
         <p></p>
