--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     </head>
     <body>
         <style>.divscroll{width: 5; height: 10; overflow-x: scroll;}</style>
-        <h1 style="font-family: Ubuntu; font-size: 128; color: white;">P L A S M A - O S</h1>
-        <p style="font-size: 30pt; color: white;"><em>Minimal and collaborative kernel</em></p>
-        <p style="font-family: Ubuntu; font-size: 30pt; color:white">DEMO OUT NOW!</p>
-        <p style="font-family: Ubuntu; font-size: medium; color: white;">Developed by: P L A S M A Company</p>
+        <h1 style="font-family: Ubuntu; font-size: 128; color: white;">Site Moved</h1>
+        <p>New site:</p>
+        <p style="font-family: Ubuntu; font-size: medium; color: white;">P L A S M A Company</p>
         <a href="https://discord.gg/92RFjFyFHH" style="color: white; font-family: Ubuntu;">Join our community</a>
         <p></p>
         <a href="https://github.com/gabmeow/Plasma-OS/tree/main/DEMO-VERSION" style="color: white; font-family: Ubuntu;">Download the system</a>
