--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <style>.divscroll{width: 5; height: 10; overflow-x: scroll;}</style>
-        <h1 style="font-family: Ubuntu; font-size: 128; color: white;">Site Moved</h1>
-        <p>New site:</p>
+        <h1 style="font-family: Ubuntu; font-size: 128; color: white;">SITE MOVED</h1>
+        <p style="font-family: Ubuntu; font-size: medium; color: white;">Site moved: <a href="https://plasmaco.github.io/">https://plasmaco.github.io/</a></p>
         <p style="font-family: Ubuntu; font-size: medium; color: white;">P L A S M A Company</p>
         <a href="https://discord.gg/92RFjFyFHH" style="color: white; font-family: Ubuntu;">Join our community</a>
         <p></p>
