--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <style>.divscroll{width: 5; height: 10; overflow-x: scroll;}</style>
         <h1 style="font-family: Ubuntu; font-size: 128; color: white;">SITE MOVED</h1>
-        <p style="font-family: Ubuntu; font-size: medium; color: white;">Site moved: <a href="https://plasmaco.github.io/">https://plasmaco.github.io/</a></p>
+        <a href="https://plasmaco.github.io/" style="font-family: Ubuntu; color: white; font-size: 26;">NEW SITE</a>
         <p style="font-family: Ubuntu; font-size: medium; color: white;">P L A S M A Company</p>
         <a href="https://discord.gg/92RFjFyFHH" style="color: white; font-family: Ubuntu;">Join our community</a>
         <p></p>
